# boxel

./: .gitignore  CHANGELOG.md  Cargo.toml  flake.nix  justfile  readme.md  release-please-config.json  release-plz.toml  treefmt.nix
.github/workflows/: format-codebase.yml  lint-pr-title.yml  release-cycle.yml  release-please.yml  release-plz.yml
benches/: generation_benchmarks.rs
crates/client/: CHANGELOG.md  Cargo.toml  build.rs
crates/client/benches/: generation_benchmarks.rs  meshing_benchmarks.rs
crates/client/src/: lib.rs  main.rs  prelude.rs  settings.rs
crates/client/tools/: texture_processor.rs
crates/lightyear_example/: Cargo.toml
crates/lightyear_example/src/: client.rs  main.rs  server.rs
crates/runner/: Cargo.toml
crates/runner/tests/: test_chunk_sync.rs
crates/server/: Cargo.toml
crates/server/benches/: generation_benchmarks.rs
crates/server/src/: lib.rs  main.rs
crates/server/tests/: network_sync.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  prelude.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  paths.rs
src/: app.rs  lib.rs  main.rs  prelude.rs
src/ecs_core/: config.rs  mod.rs  worlds.rs
src/ecs_core/cross_world_communication/: mesh_command_channel.rs
src/ecs_core/state_machine/: plugin.rs
src/render/: mod.rs  scheduling.rs
src/render/passes/: mod.rs  shader_registry.rs
src/render/textures/: error.rs  loader.rs  mod.rs  (+1 more)
src/render_world/: mod.rs  scheduling.rs
src/simulation/: mod.rs
src/simulation_world/: app_lifecycle.rs  mod.rs  scheduling.rs
src/utils/: logger.rs  paths.rs
(+441 files in other folders)
