[package]
name = "lightyear_example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
lightyear = { workspace = true, features = [
  "client",
  "server",
  "netcode",
  "replication",
  "udp",
] }
bevy = { workspace = true, features = [
  "default_app",
  "default_platform",
  "3d_bevy_render",
  "ui_bevy_render",
  "bevy_asset",
  "bevy_state",
  "bevy_log",
] }
serde = { workspace = true }

[lints]
workspace = true
